# elevateflow

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: timecode.html
scripts/: clean-tauri.sh  release.cjs  release.js
src/: AIAssistant.jsx  AboutWindow.jsx  Account.jsx  App.jsx  AudienceView.jsx  Aurora.jsx  CloseConfirmWindow.jsx  ConfigureScreens.jsx  ErrorBoundary.jsx  FlowEditor.jsx  Graphics.jsx  HostingBanner.jsx  JoinSessionDialog.jsx  LTCReceiver.jsx  LTCSender.jsx  Launcher.jsx  Mix.jsx  PptxImporter.jsx  PresentationClient.jsx  Production.jsx  Settings.jsx  SlidesWithContextMenu.jsx  SplashScreen.jsx  StageMode.jsx  StageView.jsx  StreamStudio.jsx  SyncManager.jsx  TextImport.jsx  Timecode.jsx  TrailerVideo.jsx  Tutorial.jsx  UpdateModal.jsx  UpdateNotifier.jsx  WindowedOutputPicker.jsx  firebaseConfig.js  ltcDecoder.js  main.jsx  useUpdater.js
src-tauri/: Cargo.toml  audience.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  ndi.rs
src/components/CloseConfirm/: CloseConfirm.jsx
src/components/EditMode/: EditMode.jsx
src/components/GraphicsMode/: GraphicsMode.jsx
src/hooks/: useAppState.js  useEfFiles.js  useMedia.js  useNdiCapture.js  usePresentationMode.js  useSlides.js  useSync.js
src/lib/: pptxParser.js
src/styles/: CloseConfirm.css  Graphics.css  Timecode.css  animations.css  app.css  edit.css  splash.css  themes.css  tokens.css  toolbar-output-buttons.css
src/utils/: dragState.js  dragSystem.js  outputManager.js  slideDragSystem.jsx
(+12 files in other folders)
