[package]
name = "ElevateFlow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_appworship_presenter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
dirs = "5"
libloading = "0.8"
lazy_static = "1"
base64 = "0.22"
tauri-plugin-updater = "2"

# Networking for Sync
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
local-ip-address = "0.5"
